cluster-local/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: helloworld-local
  namespace: sample
spec:
  hosts:
    - helloworld.local
  location: MESH_INTERNAL
  ports:
    - number: 5000
      name: http
      protocol: HTTP
  resolution: STATIC
  workloadSelector:
    labels:
      app: helloworld
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cluster-local-helloworld
  namespace: sample
spec:
  host: helloworld.local
  subsets:
  - name: local
    labels:
      topology.istio.io/cluster: cluster-1
  - name: global
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cluster-local-helloworld
  namespace: sample
spec:
  hosts:
  - helloworld.local
  http:
  - route:
    - destination:
        host: helloworld
        subset: local
      weight: 100
